THRIFT-2420 Go argument parser for methods without arguments does not skip fields

Patch: Frank Schroeder & Jens Geyer